@@ -1,3 +1,7 @@
+2020-05-05  b606  <7627533+b606@users.noreply.github.com>
+
+	* About.xml: Better text formatting. Added urls.
+
 2020-05-03  b606  <7627533+b606@users.noreply.github.com>
 
 	* About.xml:
