@@ -1,3 +1,8 @@
+2020-05-05  b606  <7627533+b606@users.noreply.github.com>
+
+	* Archives.mdproj: Update with the tests and moved zip files
+	out.
+
 2020-05-02  b606  <7627533+b606@users.noreply.github.com>
 
 	* Archives.mdproj:
